paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/tags_2/sample_002/target.compile.log
error[E0277]: `main` has invalid return type `i32`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/tags_2/sample_002/target.rs:14:14
   |
14 | fn main() -> i32 {
   |              ^^^ `main` can only return types that implement `Termination`
   |
   = help: consider using `()`, or a `Result`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.